--- a/assets/index.html
+++ b/assets/index.html
@@ -5,33 +5,59 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <script src="script.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> 
 </head>
 <body>
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-4 min-vh-100" style="background-color: rgba(65, 129, 40, 0.1)">
+            <div class="col-4 min-vh-100" style="background-color: rgba(255, 255, 255, 0.1)">
+                <div>
+                    <label id="labelEcoFootprintNumber">Your eco footprint is <span class="badge text-bg-success">4KG</span></label>
+                    <label id="labelMonthlyComparison">This month you did <span class="badge text-bg-success">better than 90%</span> of people in Munich area</label>
+                </div>
+                
+                <div>
+                    <button class="btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                        Detailed statistics
+                    </button>
+                </div>
+
+                <div class="collapse" id="collapseExample">
+                    <div class="card card-body">
+                        <label id="labelAreaLeaderboard">Munich area leaderboard: <span class="badge text-bg-success">3rd</span></label>
+                        <label id="labelPertripConsumption">Per trip consumption: <span class="badge text-bg-warning">420 grams</span></label>
+                        <label id="labelPertripConsumption">Total emissions: <span class="badge text-bg-warning">2 kg</span></label>
+                    </div>
+                </div>
+
                 <form>
                     <div class="form-group">
-                      <label for="exampleInputEmail1">From</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="From">
-                      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                      <!-- <label for="exampleInputEmail1">From</label> -->
+                      <input type="text" class="form-control" id="inputFrom" aria-describedby="emailHelp" placeholder="From">
+                      <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                     </div>
                     <div class="form-group">
-                      <label for="exampleInputPassword1">Password</label>
-                      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                      <!-- <label for="exampleInputPassword1">Password</label> -->
+                      <input type="text" class="form-control" id="inputTo" placeholder="To">
                     </div>
                     <div class="form-check">
-                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                      <input type="checkbox" class="form-check-input" id="checkboxCarSharing">
+                      <label class="form-check-label" for="checkboxCarSharing">Car sharing</label>
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+
+                    <button type="submit" class="btn btn-secondary">Calculate route</button>
                 </form>
+            
+
+
+
             </div>
-        </div>
-        <div class="col-8 min-vh-100" style="background-color: rgba(40, 40, 129, 0.1)">
-            Maps
+
+            <div class="col-8 min-vh-100" style="background-color: rgba(51, 51, 153, 0.1)">
+                Maps
+            </div>
         </div>
     </div>
 
