Added card for plotly

--- a/assets/index.html
+++ b/assets/index.html
@@ -36,6 +36,16 @@
             <label id="labelPertripConsumption">Per trip consumption: <span class="badge text-bg-warning">420 grams</span></label>
             <label id="labelPertripConsumption">Total emissions: <span class="badge text-bg-warning">2 kg</span></label>
           </div>
+
+          <div class="card">
+            <div class="card-body">
+              Daily breakdown
+
+              <div class="card-body">
+                PLOTLY CHART
+              </div>
+            </div>
+          </div>
         </div>
 
         <form>
