--- a/assets/index.html
+++ b/assets/index.html
@@ -6,6 +6,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </head>
@@ -18,55 +19,93 @@
         <div class="min-vh-100 min-wh-100" id="map"></div>
       </div>
 
-      <div class="col-4 min-vh-100" style="background-color: rgba(255, 255, 255, 0.1)">
+      <div class="col-4 min-vh-100 p-3" style="background-color: rgba(255, 255, 255, 0.1)">
         <div>
-          <label id="labelEcoFootprintNumber">Your eco footprint is <span class="badge text-bg-success">4KG</span></label><br>
-          <label id="labelMonthlyComparison">This month you did <span class="badge text-bg-success">better than 90%</span> of people in Munich area</label>
-        </div>
-              
-        <div>
-          <button class="btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-            Detailed statistics
-          </button>
+          <!-- DIFFERENT BADGE COLORS
+          <span class="badge text-bg-success">Success</span>
+          <span class="badge text-bg-danger">Danger</span>
+          <span class="badge text-bg-warning">Warning</span> -->
+          <label id="labelEcoFootprintNumber">Your carbon footprint is <span class="badge text-bg-success">4KG</span></label><br>
+          <label id="labelMonthlyComparison">This month you did <span class="badge text-bg-danger">better than 20%</span> of people in Munich area</label>
         </div>
 
-        <div class="collapse" id="collapseExample">
-          <div class="card card-body">
-            <label id="labelAreaLeaderboard">Munich area leaderboard: <span class="badge text-bg-success">3rd</span></label>
-            <label id="labelPertripConsumption">Per trip consumption: <span class="badge text-bg-warning">420 grams</span></label>
-            <label id="labelPertripConsumption">Total emissions: <span class="badge text-bg-warning">2 kg</span></label>
+        <br>
+
+        <div>
+          <div>
+            <!-- DIFFERENT BADGE COLORS
+            <span class="badge text-bg-success">Success</span>
+            <span class="badge text-bg-danger">Danger</span>
+            <span class="badge text-bg-warning">Warning</span> -->
+            <button class="btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+              Detailed statistics
+            </button>
           </div>
 
-          <div class="card">
-            <div class="card-body">
-              Daily breakdown
+          <div class="collapse" id="collapseExample">
+            <div class="card card-body">
+              <!-- DIFFERENT BADGE COLORS
+              <span class="badge text-bg-success">Success</span>
+              <span class="badge text-bg-danger">Danger</span>
+              <span class="badge text-bg-warning">Warning</span> -->
+              <label id="labelAreaLeaderboard">Munich area leaderboard: <span class="badge text-bg-success">1st</span></label>
+              <label id="labelPerTripConsumption">Per trip consumption: <span class="badge text-bg-warning">420 grams</span></label>
+              <label id="labelTotalEmissions">Total emissions: <span class="badge text-bg-warning">2 kg</span></label>
+            </div>
 
+            <div class="card">
               <div class="card-body">
-                PLOTLY CHART
+                Daily breakdown
+
+                <div class="card-body">
+                  PLOTLY CHART
+                </div>
+
+                <div class="card-body">
+                  PLOTLY CHART
+                </div>
+
+                <div class="card-body">
+                  PLOTLY CHART
+                </div>
+
+                <div class="card-body">
+                  PLOTLY CHART
+                </div>
+
+                <div class="card-body">
+                  PLOTLY CHART
+                </div>
+
+                <div class="card-body">
+                  PLOTLY CHART
+                </div>
               </div>
             </div>
           </div>
         </div>
 
-        <form>
-          <div class="form-group">
-            <!-- <label for="exampleInputEmail1">From</label> -->
-            <input type="text" class="form-control" id="inputFrom" aria-describedby="emailHelp" placeholder="From">
-            <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
-          </div>
+        <br>
 
-          <div class="form-group">
-            <!-- <label for="exampleInputPassword1">Password</label> -->
-            <input type="text" class="form-control" id="inputTo" placeholder="To">
-          </div>
+        <div>
+          <form>
+            <div class="form-group">
+              <input type="text" class="form-control" id="inputFrom" aria-describedby="emailHelp" placeholder="From">
+            </div>
 
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="checkboxCarSharing">
-            <label class="form-check-label" for="checkboxCarSharing">Car sharing</label>
-          </div>
+            <div class="form-group mt-2">
+              <input type="text" class="form-control" id="inputTo" placeholder="To">
+            </div>
 
-          <button type="submit" class="btn btn-secondary">Calculate route</button>
-        </form>
+            <div class="form-check mt-2">
+              <input type="checkbox" class="form-check-input" id="checkboxCarSharing">
+              <label class="form-check-label" for="checkboxCarSharing">Car sharing</label>
+            </div>
+
+            <button type="submit" class="btn btn-secondary mt-2">Calculate route</button>
+          </form>
+        </div>
+
       </div>
     </div>
   </div>
