--- a/assets/index.html
+++ b/assets/index.html
@@ -1,115 +1,102 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Google Maps</title>
-  <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <title>Google Maps</title>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="style.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 <body>
 
-  <div class="">
+<div class="">
     <div class="row no-gutters g-0">
 
-      <div class="col-8 min-vh-100" style="background-color: rgba(51, 51, 153, 0.1)">
-        <div class="min-vh-100 min-wh-100" id="map"></div>
-      </div>
-
-      <div class="col-4 min-vh-100 p-3" style="background-color: rgba(255, 255, 255, 0.1)">
-        <div>
-          <label id="labelEcoFootprintNumber">Your carbon footprint is <span class="badge text-bg-success">4KG</span></label><br>
-          <label id="labelMonthlyComparison">This month you did <span class="badge text-bg-danger">better than 20%</span> of people in Munich area</label>
+        <div class="col-8 min-vh-100" style="background-color: rgba(51, 51, 153, 0.1)">
+            <div class="min-vh-100 min-wh-100" id="map"></div>
         </div>
 
-        <br>
-
-        <div>
-          <div>
-            <button class="btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-              Detailed statistics
-            </button>
-          </div>
-
-          <div class="collapse" id="collapseExample">
-            <div class="card card-body">
-              <!-- DIFFERENT BADGE COLORS
-              <span class="badge text-bg-success">Success</span>
-              <span class="badge text-bg-danger">Danger</span>
-              <span class="badge text-bg-warning">Warning</span> -->
-              <label id="labelAreaLeaderboard">Munich area leaderboard: <span class="badge text-bg-success">1st</span></label>
-              <label id="labelPerTripConsumption">Per trip consumption: <span class="badge text-bg-warning">420 grams</span></label>
-              <label id="labelTotalEmissions">Total emissions: <span class="badge text-bg-warning">2 kg</span></label>
+        <div class="col-4 min-vh-100 p-3" style="background-color: rgba(255, 255, 255, 0.1)">
+            <div>
+                <label id="labelEcoFootprintNumber">Your carbon footprint is <span
+                        class="badge text-bg-success">4KG</span></label><br>
+                <label id="labelMonthlyComparison">This month you did <span
+                        class="badge text-bg-danger">better than 20%</span> of people in Munich area</label>
             </div>
 
-            <div class="card">
-              <div class="card-body">
-                Daily breakdown
+            <br>
 
-                <div class="card-body">
-                  PLOTLY CHART
+            <div>
+                <div>
+                    <button class="btn btn-secondary" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                        Detailed statistics
+                    </button>
                 </div>
 
-                <div class="card-body">
-                  PLOTLY CHART
-                </div>
+                <br>
 
-                <div class="card-body">
-                  PLOTLY CHART
-                </div>
+                <div class="collapse" id="collapseExample">
+                    <div class="card card-body">
+                        <!-- DIFFERENT BADGE COLORS
+                        <span class="badge text-bg-success">Success</span>
+                        <span class="badge text-bg-danger">Danger</span>
+                        <span class="badge text-bg-warning">Warning</span> -->
+                        <label id="labelAreaLeaderboard">Munich area leaderboard: <span class="badge text-bg-success">1st</span></label>
+                        <label id="labelPerTripConsumption">Per trip consumption: <span class="badge text-bg-warning">420 grams</span></label>
+                        <label id="labelTotalEmissions">Total emissions: <span class="badge text-bg-warning">2 kg</span></label>
+                    </div>
 
-                <div class="card-body">
-                  PLOTLY CHART
+                    <div class="card">
+                        <div class="card-body">
+                            Daily carbon footprint chart
+                            <div id="myDiv" style="width:100%"/>
+                        </div>
+                    </div>
                 </div>
-
-                <div class="card-body">
-                  PLOTLY CHART
-                </div>
-
-                <div class="card-body">
-                  PLOTLY CHART
-                </div>
-              </div>
             </div>
-          </div>
+
+            <br>
+
+            <div>
+                <form>
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="inputFrom" aria-describedby="emailHelp"
+                               placeholder="From">
+                    </div>
+
+                    <div class="form-group mt-2">
+                        <input type="text" class="form-control" id="inputTo" placeholder="To">
+                    </div>
+
+                    <div class="form-check mt-2">
+                        <input type="checkbox" class="form-check-input" id="checkboxCarSharing">
+                        <label class="form-check-label" for="checkboxCarSharing">Car sharing</label>
+                    </div>
+
+                    <button type="submit" class="btn btn-secondary mt-2">Calculate route</button>
+                </form>
+            </div>
+
         </div>
-
-        <br>
-
-        <div>
-          <form>
-            <div class="form-group">
-              <input type="text" class="form-control" id="inputFrom" aria-describedby="emailHelp" placeholder="From">
-            </div>
-
-            <div class="form-group mt-2">
-              <input type="text" class="form-control" id="inputTo" placeholder="To">
-            </div>
-
-            <div class="form-check mt-2">
-              <input type="checkbox" class="form-check-input" id="checkboxCarSharing">
-              <label class="form-check-label" for="checkboxCarSharing">Car sharing</label>
-            </div>
-
-            <button type="submit" class="btn btn-secondary mt-2">Calculate route</button>
-          </form>
-        </div>
-
-      </div>
     </div>
-  </div>
+</div>
 
 <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0okXI-8d3yWn8_wR33GYPj01JTzRlewg&callback=initMap&v=weekly"
-      defer
-    ></script>
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0okXI-8d3yWn8_wR33GYPj01JTzRlewg&callback=initMap&v=weekly"
-      defer
-    ></script>
-    <script src="script.js"></script>
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0okXI-8d3yWn8_wR33GYPj01JTzRlewg&callback=initMap&v=weekly"
+        defer
+></script>
+<script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0okXI-8d3yWn8_wR33GYPj01JTzRlewg&callback=initMap&v=weekly"
+        defer
+></script>
+<script src="script.js"></script>
 </body>
 </html>
