--- a/assets/index.html
+++ b/assets/index.html
@@ -23,8 +23,9 @@
             <div class="min-vh-100 min-wh-100" id="map"></div>
         </div>
 
-        <div class="col-4 min-vh-100 p-3" style="background-color: rgba(255, 255, 255, 0.1)">
-            <div>
+        <div class="col-4 min-vh-100" style="background-color: rgba(255, 255, 255, 0.1)">
+
+            <div class="ps-3 pt-3">
                 <label id="labelEcoFootprintNumber">Your carbon footprint is <span
                         class="badge text-bg-success">4KG</span></label><br>
                 <label id="labelMonthlyComparison">This month you did <span
@@ -34,7 +35,7 @@
             <br>
 
             <div>
-                <div>
+                <div class="ps-3 pt-3">
                     <button class="btn btn-secondary" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                         Detailed statistics
@@ -54,8 +55,8 @@
                         <label id="labelTotalEmissions">Total emissions: <span class="badge text-bg-warning">2 kg</span></label>
                     </div>
 
-                    <div class="card">
-                        <div class="card-body">
+                    <div class="card card-body ">
+                        <div>
                             Daily carbon footprint chart
                             <div id="myDiv" style="width:100%"/>
                         </div>
@@ -65,7 +66,7 @@
 
             <br>
 
-            <div>
+            <div class="ps-3">
                 <form>
                     <div class="form-group">
                         <input type="text" class="form-control" id="inputFrom" aria-describedby="emailHelp"
