--- a/assets/index.html
+++ b/assets/index.html
@@ -55,8 +55,12 @@
             <label class="form-check-label" for="checkboxCarSharing">Car sharing</label>
           </div>
 
-          <button type="submit" class="btn btn-secondary">Calculate route</button>
+          <button type="button" class="btn btn-secondary" id="route" onclick="createRoute(); return false;">Calculate route</button>
         </form>
+
+        <div id="routes">
+           
+        </div>
       </div>
     </div>
   </div>
