--- a/assets/index.html
+++ b/assets/index.html
@@ -6,13 +6,13 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
             crossorigin="anonymous"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -27,24 +27,24 @@
 
             <div class="ps-3 pt-3">
                 <label id="labelEcoFootprintNumber">Your carbon footprint is <span
-                        class="badge text-bg-success">4KG</span></label><br>
+                        class="badge text-bg-success">4 kg</span></label><br>
                 <label id="labelMonthlyComparison">This month you did <span
-                        class="badge text-bg-danger">better than 20%</span> of people in Munich area</label>
+                        class="badge text-bg-danger">better than 20 %</span> of people in Munich area</label>
             </div>
 
-            <br>
-
             <div>
-                <div class="ps-3 pt-3">
-                    <button class="btn btn-secondary" type="button" data-bs-toggle="collapse"
+                <div class="d-grid gap-2 ps-3 pt-3">
+                    <button class="btn btn-light btn-lg" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                        Detailed statistics
+                        <!--                        Detailed statistics-->
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                             class="bi bi-caret-down" viewBox="0 0 16 16">
+                            <path d="M3.204 5h9.592L8 10.481 3.204 5zm-.753.659 4.796 5.48a1 1 0 0 0 1.506 0l4.796-5.48c.566-.647.106-1.659-.753-1.659H3.204a1 1 0 0 0-.753 1.659z"/>
+                        </svg>
                     </button>
                 </div>
 
-                <br>
-
-                <div class="collapse" id="collapseExample">
+                <div class="collapse ps-3" id="collapseExample">
                     <div class="card card-body">
                         <!-- DIFFERENT BADGE COLORS
                         <span class="badge text-bg-success">Success</span>
@@ -75,11 +75,6 @@
 
                     <div class="form-group mt-2">
                         <input type="text" class="form-control" id="inputTo" placeholder="To">
-                    </div>
-
-                    <div class="form-check mt-2">
-                        <input type="checkbox" class="form-check-input" id="checkboxCarSharing">
-                        <label class="form-check-label" for="checkboxCarSharing">Car sharing</label>
                     </div>
 
                     <button type="submit" class="btn btn-secondary mt-2">Calculate route</button>
