--- a/assets/index.html
+++ b/assets/index.html
@@ -77,12 +77,9 @@
                         <input type="text" class="form-control" id="inputTo" placeholder="To">
                     </div>
 
-                    <button type="submit" class="btn btn-secondary mt-2">Calculate route</button>
+                    <button type="button" class="btn btn-primary mb-2 mt-2" id="route" onclick="createRoute(); return false;">Calculate route</button>
                 </form>
             </div>
-
-          <button type="button" class="btn btn-secondary" id="route" onclick="createRoute(); return false;">Calculate route</button>
-        </form>
 
         <div id="routes">
            
