--- a/assets/index.html
+++ b/assets/index.html
@@ -8,6 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
             crossorigin="anonymous"></script>
@@ -23,18 +27,28 @@
             <div class="min-vh-100 min-wh-100" id="map"></div>
         </div>
 
-        <div class="col-4 vh-100 overflow-auto" style="background-color: #fafafa">
+        <div class="col-4 vh-100 overflow-auto" style="background-color: #FAFAFA">
 
-            <div class="ps-3 pt-3">
-                <label id="labelEcoFootprintNumber">Your carbon footprint is <span
-                        class="badge text-bg-success">4 kg</span></label><br>
-                <label id="labelMonthlyComparison">This month you did <span
-                        class="badge text-bg-danger">better than 20 %</span> of people in Munich area</label>
+            <div style="background-color: white; padding: 5px;">
+                <div style="display: flex; align-items: center; justify-content: left;">
+                    <img src="./images/logo_icon.png" height="40px" style="margin-right: 5px"/>
+                    <h3 style="margin-top: 8px;">ReduceIt</h3>
+                </div>
             </div>
-
-            <div>
-                <div class="d-grid gap-2 ps-3 pt-3">
+            <div style="background-color: #F5F5F5; padding-right: 5px; padding-left: 5px;">
+                <div>
+                    <div style="background-color:white; padding:7px; border-radius: 5px; margin-bottom: 5px">
+                        <label id="labelEcoFootprintNumber" style="padding-bottom: 5px;">Your carbon footprint is <span
+                            class="badge text-bg-success">4 kg</span></label><br>
+                    </div>
+                    <div style="background-color:white; padding:7px; border-radius: 5px; margin-bottom: 5px">
+                    <label id="labelMonthlyComparison">This month you did <span
+                            class="badge text-bg-danger">better than 20 %</span> of people in Munich area</label>
+                    </div>
+                    <div>
+                <div class="d-grid gap-2" style="padding-left:0;">
                     <button class="btn btn-light btn-lg" type="button" data-bs-toggle="collapse"
+                            style="background-color: white;"
                             data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                         <!--                        Detailed statistics-->
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -44,43 +58,46 @@
                     </button>
                 </div>
 
-                <div class="collapse ps-3" id="collapseExample">
-                    <div class="card card-body">
-                        <!-- DIFFERENT BADGE COLORS
-                        <span class="badge text-bg-success">Success</span>
-                        <span class="badge text-bg-danger">Danger</span>
-                        <span class="badge text-bg-warning">Warning</span> -->
-                        <label id="labelAreaLeaderboard">Munich area leaderboard: <span class="badge text-bg-success">1st</span></label>
-                        <label id="labelPerTripConsumption">Per trip consumption: <span class="badge text-bg-warning">420 grams</span></label>
-                        <label id="labelTotalEmissions">Total emissions: <span class="badge text-bg-warning">2 kg</span></label>
-                    </div>
+                <div class="collapse" id="collapseExample">
+                        <div style="background-color:white; padding:7px; border-radius: 5px; margin-bottom: 5px; margin-top: 5px;">
+                            <!-- DIFFERENT BADGE COLORS
+                            <span class="badge text-bg-success">Success</span>
+                            <span class="badge text-bg-danger">Danger</span>
+                            <span class="badge text-bg-warning">Warning</span> -->
+                            <label id="labelAreaLeaderboard">Munich area leaderboard: <span class="badge text-bg-success">1st</span></label>
+                            <label id="labelPerTripConsumption">Per trip consumption: <span class="badge text-bg-warning">420 grams</span></label>
+                            <label id="labelTotalEmissions">Total emissions: <span class="badge text-bg-warning">2 kg</span></label>
+                        </div>
 
-                    <div class="card card-body ">
-                        <div>
-                            Daily carbon footprint chart
-                            <div id="myDiv" style="width:100%"/>
+                        <div style="background-color:white; padding:7px; border-radius: 5px; margin-bottom: 5px">
+                            <div>
+                                Daily carbon footprint chart
+                                <div id="myDiv" style="width:100%"/>
+                            </div>
                         </div>
                     </div>
                 </div>
+                </div>
+
+                <!-- split between input fields-->
+                <!--<br> -->
+
+                <div style="background-color: #F5F5F5; margin-top: 5px">
+                    <form>
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="inputFrom" aria-describedby="emailHelp"
+                                   placeholder="From">
+                        </div>
+
+                        <div class="form-group mt-2">
+                            <input type="text" class="form-control" id="inputTo" placeholder="To">
+                        </div>
+
+                        <button type="button" class="btn btn-primary mb-2 mt-2" id="route" onclick="createRoute(); return false;">Calculate route</button>
+                    </form>
+                </div>
+
             </div>
-
-            <br>
-
-            <div class="ps-3">
-                <form>
-                    <div class="form-group">
-                        <input type="text" class="form-control" id="inputFrom" aria-describedby="emailHelp"
-                               placeholder="From">
-                    </div>
-
-                    <div class="form-group mt-2">
-                        <input type="text" class="form-control" id="inputTo" placeholder="To">
-                    </div>
-
-                    <button type="button" class="btn btn-primary mb-2 mt-2" id="route" onclick="createRoute(); return false;">Calculate route</button>
-                </form>
-            </div>
-
         <div id="routes">
            
         </div>
