--- a/assets/index.html
+++ b/assets/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Google Maps</title>
+    <title>ReduceIt</title>
+    <link rel="icon"  href="/favicon.ico">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
     <meta charset="utf-8">
